[tool.poetry]
name = "abacum-backend-test"
version = "0.1.0"
description = "Abacum backend code test."
authors = ["jlgonzalez-martinez"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28"
sqlalchemy = "^1.4"
fastapi = "^0.82.0"
dynaconf = "^3.1.9"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.18.3"
websockets = "^10.3"
psycopg2 = "^2.9.3"
SQLAlchemy-Utils = "^0.38.3"
pandas = "^1.5.1"
numpy = "^1.23.4"
tenacity = "^8.1.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
tox = "^3.25.1"
black = "^22.8.0"
flake8 = "^5.0.4"
tox-docker = "^3.1.0"
pytest-cov = "^3.0.0"
